# es_fin

./: .gitignore  .gitmodules  main.ipynb  pyproject.toml
data/: DS_test_data.xlsx  classification_task_output.xlsx
