[tool.poetry]
name = "es-fin"
version = "0.1.0"
description = ""
authors = ["messiah1349 <messiah1349@gmail.com>"]
readme = "README.md"
packages = [{include = "es_fin"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.0"
lightgbm = "^4.1.0"
matplotlib = "^3.8.0"
llvmlite = "^0.40.1"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
